fixed padding on tablet screen size

--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,7 @@ img {
     font-size: 90px;
     position: relative;
     bottom: 43rem;
+    left: 0;
     padding-left: 10rem;
     text-shadow: 0px 7px 11px rgb(0, 0, 0);
     z-index: 3;
